--- a/index.html
+++ b/index.html
@@ -1,26 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>doscinco.uno</title>
-  <style>
-    body {
-      font-family: Helvetica, Arial, sans-serif;
-      background: #fff;
-      color: #000;
-      text-align: center;
-      margin: 2rem;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      margin-top: 1rem;
-    }
-  </style>
+
+  <link rel="stylesheet" href="ASSETS/CSS/style.css" />
 </head>
 <body>
-  <p>hello world!</p>
-  <img src="/AA004.jpg" alt="AA004 image" />
+  <div class="page">
+    <header class="site-header">
+      <img src="ASSETS/avatar_hi.jpg" alt="Site avatar" class="logo" />
+    </header>
+  </div>
 </body>
 </html>
