go back go back

--- a/index.html
+++ b/index.html
@@ -10,32 +10,8 @@
 <body>
   <div class="page">
     <header class="site-header">
-      <!-- Non-interactive logo block with a shield overlay -->
-      <span class="logo-wrap" aria-hidden="true">
-        <img
-          src="ASSETS/avatar_hi.jpg"
-          alt=""
-          class="logo-img"
-          draggable="false"
-          role="presentation"
-        />
-        <span class="logo-shield"></span>
-      </span>
+      <img src="ASSETS/avatar_hi.jpg" alt="Site avatar" class="logo" />
     </header>
   </div>
-
-  <script>
-    // Hard-block common interactions
-    document.addEventListener("contextmenu", e => e.preventDefault(), { capture: true });
-    document.addEventListener("dragstart", e => e.preventDefault(), { capture: true });
-    document.addEventListener("drop", e => e.preventDefault(), { capture: true });
-
-    // Extra guard on the image itself
-    const img = document.querySelector(".logo-img");
-    if (img) {
-      img.addEventListener("mousedown", e => e.preventDefault(), { capture: true });
-      img.addEventListener("touchstart", e => e.preventDefault(), { passive: false, capture: true });
-    }
-  </script>
 </body>
 </html>
